# arksorg-site

./: .envrc  .gitignore  .gitmodules  README.md  _config.local.yml  cdl-config.env  pyproject.toml  requirements.txt  unit.json  unit.json.template
.github/workflows/: docker.yml
ansible/: README.md  deploy_arksorg_site.yaml  site.yaml
ansible/doc_files/: arks_org_site_components.puml
ansible/files/: unit.json
ansible/group_vars/: all.yaml
ansible/notes/: original_manual_deployment_notes.md  playbook_development_notes.md
ansible/playbooks/: run_jekyll_update.yaml
ansible/roles/arksorg-site/tasks/: build_site_docs.yaml  main.yaml
ansible/templates/: jekyll_watch.service.j2  unit.json.j2
arks/: __init__.py  __main__.py  app.py  config.py
arks/static/: style.css
arks/templates/: 404.html  base.html  index.html  schemes.html
doc_src/: component_diagram.puml  container_diagram.puml  context_diagram.puml  index.md
docker/: Dockerfile  docker-config.env  entrypoint.sh
scripts/: eval_naan_record.py  naan_manage.py  requirements.txt  run_command.sh
