[tool.poetry]
name = "arks"
version = "0.3.0"
description = "This is the arks.org resolver service."
authors = ["datadave <605409+datadavev@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry_bumpversion.file."arks/__init__.py"]

[tool.poetry.dependencies]
python = "^3.9"
PyYAML = "^6"
fastapi = "^0"
pydantic-settings = "^2"
rslv = {git = "https://github.com/CDLUC3/resolver.git", branch="main"}
click = "^8.1.7"
httpx = "^0.27.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.29"}
aiosqlite = "^0.20.0"


[tool.poetry.scripts]
arks = 'arks.__main__:main'

[tool.poetry.group.dev.dependencies]
pytest = "^7"
uvicorn = "^0.30.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
